change font family

--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="SimoneDiPrima">
     <meta name="description" content="html-css-float-card">
-    
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;700&display=swap" rel="stylesheet">
     <title>Web's developer cards</title>
 </head>
 <body>
+    <div class="container">
+        <header>
+            <h1>Meet our Team</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium doloribus, iste cum omnis fuga suscipit ipsum nam eveniet ullam ab quaerat blanditiis quae nulla officiis quis nisi dignissimos provident cupiditate.</p>
+        </header>
+    </div>
     
 </body>
 </html>
