--- a/index.html
+++ b/index.html
@@ -18,6 +18,44 @@
             <h1>Meet our Team</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium doloribus, iste cum omnis fuga suscipit ipsum nam eveniet ullam ab quaerat blanditiis quae nulla officiis quis nisi dignissimos provident cupiditate.</p>
         </header>
+        <main class="clearfix">
+            <div class="card clearfix"">
+                <img src="img/male1.png" class="clearfix"alt="">
+                <h3 class="testo">Marco Bianchi</h3>
+                <h5 class="testo">web developer</h5>
+                <a class="testo" href="www.google.it" target="_blank">marcobianchi@team.com</a>
+            </div>
+            <div class="card clearfix"">
+                <img src="img/male1.png" class="clearfix"alt="">
+                <h3 class="testo">Laura Rossi</h3>
+                <h5 class="testo">front-end developer</h5>
+                <a class="testo" href="www.google.it" target="_blank">laurarossi@team.com</a>
+            </div>
+            <div class="card clearfix"">
+                <img src="img/male1.png" class="clearfix"alt="">
+                <h3 class="testo">Giorgio Verdi</h3>
+                <h5 class="testo">Back-end developer</h5>
+                <a class="testo" href="www.google.it" target="_blank">giorgioverdi@team.com</a>
+            </div>
+            <div class="card clearfix"">
+                <img src="img/male1.png" class="clearfix"alt="">
+                <h3 class="testo">Marta Ipsum</h3>
+                <h5 class="testo">Seo specialist</h5>
+                <a class="testo" href="www.google.it" target="_blank">martaipsum@team.com</a>
+            </div>
+            <div class="card clearfix"">
+                <img src="img/male1.png" class="clearfix"alt="">
+                <h3 class="testo">Roberto Lorem</h3>
+                <h5 class="testo">Project Manager</h5>
+                <a class="testo" href="www.google.it" target="_blank">robertolorem@team.com</a>
+            </div>
+            <div class="card clearfix"">
+                <img src="img/male1.png" class="clearfix"alt="">
+                <h3 class="testo">Daniela Amet</h3>
+                <h5 class="testo">Analysy</h5>
+                <a class="testo" href="www.google.it" target="_blank">danielaamet@team.com</a>
+            </div>
+        </main>
     </div>
     
 </body>
