--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <h1>Meet our Team</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium doloribus, iste cum omnis fuga suscipit ipsum nam eveniet ullam ab quaerat blanditiis quae nulla officiis quis nisi dignissimos provident cupiditate.</p>
         </header>
-        <main class="clearfix">
-            <div class="card clearfix"">
+        <main class="clearfix all-cards">
+            <div class="card clearfix">
                 <img src="img/male1.png" class="clearfix"alt="">
                 <h3 class="testo">Marco Bianchi</h3>
                 <h5 class="testo">web developer</h5>
@@ -37,19 +37,19 @@
                 <h5 class="testo">Back-end developer</h5>
                 <a class="testo" href="www.google.it" target="_blank">giorgioverdi@team.com</a>
             </div>
-            <div class="card clearfix"">
+            <div class="card clearfix">
                 <img src="img/female2.png" class="clearfix"alt="">
                 <h3 class="testo">Marta Ipsum</h3>
                 <h5 class="testo">Seo specialist</h5>
                 <a class="testo" href="www.google.it" target="_blank">martaipsum@team.com</a>
             </div>
-            <div class="card clearfix"">
+            <div class="card clearfix">
                 <img src="img/male3.png" class="clearfix"alt="">
                 <h3 class="testo">Roberto Lorem</h3>
                 <h5 class="testo">Project Manager</h5>
                 <a class="testo" href="www.google.it" target="_blank">robertolorem@team.com</a>
             </div>
-            <div class="card clearfix"">
+            <div class="card clearfix">
                 <img src="img/female3.png" class="clearfix"alt="">
                 <h3 class="testo">Daniela Amet</h3>
                 <h5 class="testo">Analysy</h5>
