es quasi completo

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
             <h1>Meet our Team</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium doloribus, iste cum omnis fuga suscipit ipsum nam eveniet ullam ab quaerat blanditiis quae nulla officiis quis nisi dignissimos provident cupiditate.</p>
         </header>
-        <main class="clearfix all-cards">
+        <div class="clearfix column">
             <div class="card clearfix">
                 <img src="img/male1.png" class="clearfix"alt="">
+               <ul>
                 <h3 class="testo">Marco Bianchi</h3>
                 <h5 class="testo">web developer</h5>
                 <a class="testo" href="www.google.it" target="_blank">marcobianchi@team.com</a>
+            </ul>
             </div>
             <div class="card clearfix"">
                 <img src="img/female1.png" class="clearfix"alt="">
@@ -37,6 +39,7 @@
                 <h5 class="testo">Back-end developer</h5>
                 <a class="testo" href="www.google.it" target="_blank">giorgioverdi@team.com</a>
             </div>
+            <div class="clearfix column"></div>
             <div class="card clearfix">
                 <img src="img/female2.png" class="clearfix"alt="">
                 <h3 class="testo">Marta Ipsum</h3>
@@ -55,6 +58,7 @@
                 <h5 class="testo">Analysy</h5>
                 <a class="testo" href="www.google.it" target="_blank">danielaamet@team.com</a>
             </div>
+        </div>
         </main>
     </div>
     
