es quasi completo senza ul

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="card clearfix">
                 <img src="img/male1.png" class="clearfix"alt="">
                <ul>
-                <h3 class="testo">Marco Bianchi</h3>
+                <li><h3 class="testo">Marco Bianchi</h3></li>
                 <h5 class="testo">web developer</h5>
                 <a class="testo" href="www.google.it" target="_blank">marcobianchi@team.com</a>
             </ul>
