es quasi completo senza ul

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <div class="clearfix column">
             <div class="card clearfix">
                 <img src="img/male1.png" class="clearfix"alt="">
-               <ul>
-                <li><h3 class="testo">Marco Bianchi</h3></li>
+               
+                <h3 class="testo">Marco Bianchi</h3>
                 <h5 class="testo">web developer</h5>
                 <a class="testo" href="www.google.it" target="_blank">marcobianchi@team.com</a>
-            </ul>
+            
             </div>
             <div class="card clearfix"">
                 <img src="img/female1.png" class="clearfix"alt="">
